# recognition

./: .env  .gitignore  Cargo.toml  diesel.toml  requirements.txt  tasks.txt
components/backend/: Cargo.toml
components/backend/migrations/2024-08-05-094300_initial/: up.sql
components/backend/src/: db_connection.rs  schema.rs
components/backend/src/middleware/: authorize.rs
components/backend/src/routes/: mod.rs
components/backend/src/routes/api/: albums.rs  mod.rs  photos.rs  users.rs
components/backend/src/services/: photos.rs  users.rs
deployment/compose/: dev.yml
migrations/2024-07-15-195147_initial/: down.sql  up.sql
migrations/2024-08-05-094300_initial/: down.sql  up.sql
migrations/2024-08-05-095203_insert_admin/: down.sql  up.sql
migrations/2024-08-08-202655_add_photo_embedding_column/: down.sql  up.sql
migrations/2024-08-21-150453_album_title_null_false/: down.sql  up.sql
migrations/2024-08-28-184656_group_faces/: down.sql  up.sql
migrations/2024-08-29-184111_edit_persons_avatar_constr/: up.sql
src/: auth.rs  errors.rs  main.rs  models.rs  schema.rs  utils.rs
src/controllers/: users.rs
src/fashion_clip/: clip_image_processor.rs  embed.rs
src/middleware/: admin_permissions.rs  authorize.rs  errors.rs  mod.rs
src/ml/: mod.rs
src/ml/arcface/: arc_face_image.rs  mod.rs  postprocessor.rs  predictor.rs
src/ml/clip/: clip_image_processor.rs  config.rs  embed.rs  mod.rs
src/ml/ultraface/: mod.rs  ultra_image.rs  ultra_predictor.rs
src/photo_processing/: mod.rs
src/photo_processing/clip/: clip_image_processor.rs  embed.rs  mod.rs
src/photo_processing/ultraface/: ultra_image.rs  ultra_predictor.rs
src/routes/: mod.rs
src/routes/api/: albums.rs  mod.rs  photos.rs  security.rs  users.rs
src/routes/pages/: gallery.rs  mod.rs  security.rs
src/services/: albums.rs  facial_recognition.rs  mod.rs  photos.rs  users.rs
src/ultraface/: mod.rs  post_processor.rs  ultra_image.rs  ultra_predictor.rs
static/gallery/css/: image_zoom.css  style.css
static/gallery/js/: image_zoom.js  index.js
templates/: auth.html  gallery.html
