[package]
name = "recognition"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros", "multipart"] }
jsonwebtoken = "9.3.0"
tokio = { version = "1.28.2", features = ["full"] }
serde_json = "1.0.117"
serde = {version="1.0.203", features = ["derive"]}
utoipa = { features = ["axum_extras"], version = "4.2.3" }
utoipa-swagger-ui = { features = ["axum"], version = "7.1.0" }
diesel = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15"
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
axum_typed_multipart = "0.11.1"
once_cell = "1.8"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
bcrypt = "0.15.1"
chrono = { version = "0.4.34", features = ["serde"] }
tower-cookies = "=0.10.0"
# Для шаблонизатора
askama = "0.12.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5.2", features = ["full"] }
image = "0.25.2"
