[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros", "multipart"] }
jsonwebtoken = "9.3.0"
tokio = { version = "1.28.2", features = ["full"] }
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
utoipa = { features = ["axum_extras"], version = "4.2.3" }
utoipa-swagger-ui = { features = ["axum"], version = "7.1.0" }
diesel = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15"
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
axum_typed_multipart = "0.11.1"
once_cell = "1.8"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
bcrypt = "0.15.1"
chrono = { version = "0.4.34", features = ["serde"] }
tower-cookies = "=0.10.0"
reqwest = { version = "0.12.9", features = ["blocking", "multipart", "stream"] }
env_logger = "0.11.5"
log = "0.4.22"
thiserror = "1.0.66"
anyhow = "1.0.93"

# Для шаблонизатора
tower-http = { version = "0.5.2", features = ["full"] }
image = "0.24.7"

# PgVector
pgvector = { version = "0.4", features = ["diesel"] }
postgres = "0.19"
